# HC32F460xE_Arduino

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  HC32F460xE.ld  readme.md
.eide/: eide.yml  files.options.yml
App/: App.cpp  App.h
App/Pages/: Page.h
App/Pages/Startup/: Startup.h  StartupView.cpp
App/Resource/: ResourcePool.cpp  ResourcePool.h
App/Resource/font/: font_oswaldBold_12.c  font_oswaldbold_18.c
App/Resource/img/: img_src_location.c  img_src_menu.c
App/Utils/PageManager/: PageBase.h  PageManager_State.cpp
App/Utils/ResourceManager/: ResourceManager.cpp
App/Utils/lv_anim_label/: lv_anim_label.h
App/inc/: slave_i2c.h
App/src/: main.cpp  message_decode.cpp  message_decode.h  slave_i2c.cpp  slave_i2c.h
Arduino/: Arduino.h  HardwareSerial.cpp  HardwareSerial.h  WVariant.h  core_debug.h  core_log.h  core_types.h  itoa.c  itoa.h  wiring_constants.h  wiring_digital.cpp  wiring_digital.h  yield.c  yield.h
Libraries/Adafruit-GFX-Library/: Adafruit_SPITFT.cpp
Libraries/Adafruit-ST7735-Library/: Adafruit_ST7789.cpp  Adafruit_ST77xx.cpp  Adafruit_ST77xx.h
Libraries/Adafruit_BusIO/: Adafruit_I2CDevice.h  Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h
Libraries/Bq40z50/: bq40z50.cpp  bq40z50.h
Libraries/ButtonEvent/: ButtonEvent.cpp
Libraries/MillisTaskManager/: MillisTaskManager.cpp  MillisTaskManager.h
Libraries/Mp2762a/: mp2762a.cpp  mp2762a.h
Libraries/Parser/: CMakeLists.txt
Libraries/Parser/include/: SparkFun_Extensible_Message_Parser.h  semp_config.h  semp_crc24q.h  semp_crc32.h  semp_crc_sbf.h  semp_crc_spartn.h
Libraries/Parser/src/: Parse_CUSTOM.cpp  Parse_NMEA.cpp  Parse_RTCM.cpp  Parse_SBF.cpp  Parse_SPARTN.cpp  Parse_UBLOX.cpp  Parse_Unicore_Binary.cpp  Parse_Unicore_Hash.cpp  SparkFun_Extensible_Message_Parser.cpp
Libraries/cm_backtrace/: FaultHandler.cpp  cm_backtrace.h  cmb_cfg.h  cmb_def.h
Libraries/easylogger/inc/: elog.h  elog_cfg.h
Libraries/easylogger/port/: elog_port.c
Libraries/easylogger/src/: elog.c
Libraries/lvgl/: lv_conf.h
Libraries/lvgl/porting/: lv_port.cpp  lv_port.h  lv_port_disp.cpp  lv_port_indev.cpp  lv_port_indev.h
Libraries/lvglpp/: idf_component.yml
Platform/Config/: hc32f4xx_conf.h  mcu_config.h  mcu_define.h
Platform/Core/inc/: SEGGER_RTT.h  SEGGER_RTT_Conf.h  SPI.h  Wire.h  addon_gpio.h  delay.h  dwt.h  flash.h  gpio.h  usart.h
Platform/Core/src/: SEGGER_RTT.c  SEGGER_RTT_printf.c  SPI.cpp  Syscalls_KEIL.c  Wire.cpp  addon_gpio.c  delay.c  dwt.c  flash.c  hc32f4xx_it.c  new.cpp  syscalls.c  usart.c
Platform/Driver/inc/: hc32_ll_utility.h
Platform/Driver/src/: hc32_ll_clk.c  hc32_ll_pwc.c  hc32_ll_utility.c
Platform/HAL/: CommonMacro.h  HAL.c  HAL.cpp  HAL.h  HAL_CONFIG.h  HAL_CORTEX.c  HAL_CORTEX.h  HAL_DEF.h  HAL_Display.cpp  HAL_I2C.cpp  HAL_Key.cpp  HAL_Led.cpp  HAL_Power.cpp
Platform/project/: JLinkLog.txt  keil-build-viewer-record.txt  proj_hc32.uvguix.gtc  proj_hc32.uvguix.guoti  proj_hc32.uvoptx  proj_hc32.uvprojx
Platform/support/: support.c  support.h  system.c  system.h
Simulator/: .clangd  CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.cpp  mouse_cursor_icon.c
Simulator/App/: App.cpp  App.h
Simulator/App/Common/DataProc/: DP_GPS.cpp  DP_LIST.inc  DP_Power.cpp  DP_Recorder.cpp  DataProc.h  DataProc_Def.h
Simulator/App/Pages/: APPFactory.cpp  AppFactory.h  Page.h
Simulator/App/Pages/Dialplate/: Dialplate.cpp  Dialplate.h  DialplateModel.cpp  DialplateModel.h  DialplateView.cpp  DialplateView.h
Simulator/App/Pages/HardwareCheckView/: HardwareCheck.cpp  HardwareCheck.h  HardwareCheckModel.cpp  HardwareCheckModel.h  HardwareCheckView.cpp  HardwareCheckView.h
Simulator/App/Pages/SaveConfig/: SaveConfig.cpp  SaveConfig.h  SaveConfigModel.cpp  SaveConfigModel.h  SaveConfigView.cpp  SaveConfigView.h
Simulator/App/Pages/Shutdown/: Shutdown.cpp  Shutdown.h  ShutdownModel.cpp  ShutdownModel.h  ShutdownView.cpp  ShutdownView.h
Simulator/App/Pages/Startup/: Startup.cpp  Startup.h  StartupModel.cpp  StartupModel.h  StartupView.cpp  StartupView.h
Simulator/App/Pages/StartupLogo/: StartupLogo.cpp  StartupLogo.h  StartupLogoView.cpp  StartupLogoView.h
Simulator/App/Pages/StatusBar/: StatusBar.cpp  StatusBar.h
Simulator/App/Pages/SystemInfos/: SystemInfos.cpp  SystemInfos.h  SystemInfosModel.cpp  SystemInfosModel.h  SystemInfosView.cpp  SystemInfosView.h
Simulator/App/Pages/WorkSettings/: WorkSettings.cpp  WorkSettings.h  WorkSettingsModel.cpp  WorkSettingsModel.h  WorkSettingsView.cpp  WorkSettingsView.h
Simulator/App/Resource/: ResourcePool.cpp  ResourcePool.h
Simulator/App/Resource/font/: font_oswaldBold_12.c  font_oswaldBold_18.c  font_rajdhaniBold_20.c  font_rajdhaniBold_40.c
Simulator/App/Resource/img/: img_src_back.c  img_src_base.c  img_src_battery.c  img_src_device.c  img_src_down.c  img_src_ntrip.c  img_src_pause.c  img_src_reset.c  img_src_rover.c  img_src_satellite.c  img_src_sd.c  img_src_setting.c  img_src_shutdown.c  img_src_start.c  img_src_startupLogo.c  img_src_up.c  img_src_wifi.c  img_src_workmode.c  startUp_Logo.c
Simulator/App/Resource/symbol/: symbol_dialplate.c  symbol_satellite.c  symbol_statusbar.c  symbol_unicode.h
Simulator/App/Utils/DataCenter/: Account.cpp  Account.h  DataCenter.cpp  DataCenter.h  DataCenterLog.h
Simulator/App/Utils/PageManager/: PM_Log.h  PageBase.cpp  PageBase.h  PageFactory.h  PageManager.h  PageManager_Anim.cpp  PageManager_Base.cpp  PageManager_Drag.cpp  PageManager_Router.cpp  PageManager_State.cpp
Simulator/App/Utils/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Simulator/App/Utils/lv_anim_label/: lv_anim_label.c  lv_anim_label.h  numberFlow.cpp  numberFlow.h  numberFlow_clock.cpp  numberFlow_clock.h
Simulator/HAL/: HAL.cpp  HAL.h  HAL_Led.cpp  HAL_Power.cpp
Simulator/lvgl/porting/: lv_port.h
Simulator/lvgl/src/extra/libs/fsdrv/: lv_fs_stdio.c
USER/: main.cpp
USER/inc/: slave_i2c.h
USER/src/: message_decode.cpp  message_decode.h  slave_i2c.cpp  slave_i2c.h
User/src/: main.cpp  message_decode.cpp  slave_i2c.cpp
cmake/stm32cubemx/: CMakeLists.txt
(+78 files in other folders)
